ecmascript/parser/tests/typescript-errors/tsc/expressions/unaryOperators/voidOperator/voidOperatorInvalidOperations/input.ts.stderr
error: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/voidOperator/voidOperatorInvalidOperations/input.ts:4:15
  |
4 | var ANY = ANY void ;    //expect error
  |               ^^^^

error: Unexpected token `;`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/voidOperator/voidOperatorInvalidOperations/input.ts:4:20
  |
4 | var ANY = ANY void ;    //expect error
  |                    ^

error: Unexpected token `;`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/voidOperator/voidOperatorInvalidOperations/input.ts:7:17
  |
7 | var ANY1 = void ;
  |                 ^

